Started book endpoints
